k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce
  namespace: ecommerce-system
  labels:
    app: ecommerce
spec:
  type: ClusterIP
  selector:
    app: ecommerce
  ports:
    - name: http
      port: 80
      targetPort: 8000
